footer navigation collapse issue

--- a/stylesheets/harmon-discount/responsive/media-query-xs.less
+++ b/stylesheets/harmon-discount/responsive/media-query-xs.less
@@ -350,7 +350,7 @@
     				padding: 6px 0;
 			    }
 			}
-			#mz-drop-zone-footer-cat-links-col1 {
+			.mz-contact-open {
 				h4 {
                   	&:first-child {
                   		border-bottom: 0;
